--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,50 @@
 
-body {font-family: "Roboto", sans-serif;
+body {
+    font-family: "Roboto", sans-serif;
     background-color: #fff;
     color: #434455;
 }
 
-ul{list-style-type: none;}
+ul{
+    list-style-type: none;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
+}
+img{
+    display: block;
+}
 
-a{text-decoration: none;}
+a{
+    text-decoration: none;
+}
 
-address{font-style: normal;}
+address{
+    font-style: normal;
+}
 
+p,h1,h2,h3,h4,h5,h6{
+    margin-top: 0;
+    margin-bottom: 0;
+}
+.container{
+    width: 1470px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0 auto;
+}
 /*==========header===========*/
 
+.header .container{
+    display: flex;
+    align-items: center;
+    padding-left: 156px;
+    padding-right: 156px;
+}
+.header-nav{
+    display: flex;
+    align-items: center;
+}
 .header-logo{
     font-family: "Raleway", sans-serif;
     font-weight: 700;
@@ -19,10 +52,19 @@ address{font-style: normal;}
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    margin-right: 76px;
+    padding-top: 24px;
+    padding-bottom: 24px;
     color: #4d5ae5;
 }
 .header-logo-part{
     color: #2e2f42;
+}
+.header-list {
+    display: flex;
+    gap: 40px;
+    padding-top: 24px;
+    padding-bottom: 24px;
 }
 .header-link{
     font-weight: 500;
@@ -30,6 +72,15 @@ address{font-style: normal;}
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2e2f42;
+}
+.header-address{
+    margin-left: auto;
+}
+.header-address-list {
+    display: flex;
+    gap: 40px;
+    padding-top: 24px;
+     padding-bottom: 24px;
 }
 .header-address-link{
     font-size: 16px;
@@ -48,8 +99,10 @@ address{font-style: normal;}
 
 /*============main===========*/
 
-/***section htro***/
+/***section hero***/
 .hero {
+    padding-top: 188px;
+    padding-bottom: 188px;
     background: #2e2f42;
 }
 .hero-title{
@@ -58,6 +111,9 @@ address{font-style: normal;}
     line-height: 1.07;
     letter-spacing: 0.02em;
     text-align: center;
+    padding-bottom: 48px;
+    max-width: 496px;
+    margin: 0 auto;
     color: #fff;
 }
 button{
@@ -68,6 +124,10 @@ button{
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.04em;
+    min-width: 169px;
+    height: 56px;
+    display: block;
+    margin: 0 auto;
     color: #fff;
     background: #4d5ae5;
 }
@@ -78,11 +138,27 @@ button{
     background: #404bbf;
 }
 /***section advantages***/
+.advantages{
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+.advantages-list{
+    display: flex;
+    gap: 24px;
+    padding-left: 156px;
+        padding-right: 156px;
+    
+
+}
+.advantages-item{
+    width: calc((100% - 24px * 3) / 4);
+}
 .advantages-subtitle{
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    margin-bottom: 8px;
     color: #2e2f42;
 }
 .advantages-item-text{
@@ -92,8 +168,10 @@ button{
     letter-spacing: 0.02em;
     color: #434455;
 }
-/***team***/
+/***section team***/
 .team{
+    padding-top: 120px;
+    padding-bottom: 120px;
     background-color: #F4F4FD
 }
 .team-title{
@@ -102,14 +180,25 @@ button{
     line-height: 1.11;
     letter-spacing: 0.02em;
     text-align: center;
-    color: #2e2f42;
     text-transform: capitalize;
+    margin-bottom: 72px;
+    color: #2e2f42;
 }
 .team-list{
-    background-color: #FFF
+    display: flex;
+    gap: 24px;
+    padding-left: 156px;
+    padding-right: 156px;
+    background-color: #f4f4fd
 }
 .team-item{
+    border-radius: 0 0 4px 4px;
+    width: calc((100% - 24px * 3) / 4);
     background-color: #FFF
+}
+.team-name-gob{
+    padding-top: 32px;
+    padding-bottom: 32px;
 }
 .team-name{
     font-weight: 500;
@@ -117,6 +206,7 @@ button{
     line-height: 1.2;
     letter-spacing: 0.02em;
     text-align: center;
+    margin-bottom: 8px;
     color: #2e2f42;
 }
 .team-gob{
@@ -127,24 +217,39 @@ button{
     text-align: center;
     color: #434455;
 }
-/***Portfolio***/
+/***section portfolio***/
+.portfolio{
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
 .portfolio-title{
     font-weight: 700;
     font-size: 36px;
     line-height: 1.11;
     letter-spacing: 0.02em;
     text-align: center;
+    padding-bottom: 72px;
     color: #2e2f42;
     text-transform: capitalize;
 }
 .portfolio-list{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 48px 24px;
+    padding-left: 156px;
+    padding-right: 156px;
     background-color: #FFF
+}
+.portfolio-subtitle-text{
+    margin: 32px 16px;
+    border: 1px solid #e7e9fc;
 }
 .portfolio-subtitle{
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    margin-bottom: 8px;
     color: #2e2f42;
 }
 .portfolio-text{
@@ -159,7 +264,13 @@ button{
 /*==============footer============*/
 
 .footer{
+    padding-top: 100px;
+    padding-bottom: 100px;
     background: #2e2f42;
+}
+.footer .container{
+    padding-left: 156px;
+    padding-right: 156px;
 }
 .footer-logo{
     font-family: "Raleway", sans-serif;
@@ -168,6 +279,8 @@ button{
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    display: block;
+    margin-bottom: 16px;
     color: #4d5ae5;
 }
 .footer-logo-part{
@@ -178,5 +291,6 @@ button{
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    max-width: 264px;
     color: #f4f4fd;
 }
