--- a/css/styles.css
+++ b/css/styles.css
@@ -29,17 +29,25 @@ p,h1,h2,h3,h4,h5,h6{
 }
 .container{
     width: 1470px;
-    padding-left: 15px;
-    padding-right: 15px;
+    /*padding-left: 15px;
+    padding-right: 15px;*/
     margin: 0 auto;
 }
 /*==========header===========*/
 
+.header{
+    padding-top: 24px;
+    padding-bottom: 24px;
+    padding-left: 15px;
+    padding-right: 15px;
+    border-bottom: 1px solid #e7e9fc
+}
 .header .container{
     display: flex;
     align-items: center;
-    padding-left: 156px;
-    padding-right: 156px;
+    /*padding-left: 156px;
+    padding-right: 156px;*/
+    width: 1158px;
 }
 .header-nav{
     display: flex;
@@ -53,8 +61,8 @@ p,h1,h2,h3,h4,h5,h6{
     letter-spacing: 0.03em;
     text-transform: uppercase;
     margin-right: 76px;
-    padding-top: 24px;
-    padding-bottom: 24px;
+    /*padding-top: 24px;
+    padding-bottom: 24px;*/
     color: #4d5ae5;
 }
 .header-logo-part{
@@ -63,8 +71,8 @@ p,h1,h2,h3,h4,h5,h6{
 .header-list {
     display: flex;
     gap: 40px;
-    padding-top: 24px;
-    padding-bottom: 24px;
+    /*padding-top: 24px;
+    padding-bottom: 24px;*/
 }
 .header-link{
     font-weight: 500;
@@ -79,8 +87,8 @@ p,h1,h2,h3,h4,h5,h6{
 .header-address-list {
     display: flex;
     gap: 40px;
-    padding-top: 24px;
-     padding-bottom: 24px;
+    /*padding-top: 24px;
+    padding-bottom: 24px;*/
 }
 .header-address-link{
     font-size: 16px;
@@ -117,6 +125,7 @@ p,h1,h2,h3,h4,h5,h6{
     color: #fff;
 }
 button{
+    border: none;
     cursor: pointer;
 }
 .hero-btn{
@@ -126,6 +135,7 @@ button{
     letter-spacing: 0.04em;
     min-width: 169px;
     height: 56px;
+    border-radius: 4px;
     display: block;
     margin: 0 auto;
     color: #fff;
@@ -142,13 +152,16 @@ button{
     padding-top: 120px;
     padding-bottom: 120px;
 }
+.visually-hidden{
+    position: absolute;
+    clip: rect(0 0 0 0);
+    border: 0;
+}
 .advantages-list{
     display: flex;
     gap: 24px;
     padding-left: 156px;
-        padding-right: 156px;
-    
-
+    padding-right: 156px;
 }
 .advantages-item{
     width: calc((100% - 24px * 3) / 4);
@@ -222,6 +235,9 @@ button{
     padding-top: 120px;
     padding-bottom: 120px;
 }
+.portfolio .container{
+    border-top: none; 
+}
 .portfolio-title{
     font-weight: 700;
     font-size: 36px;
@@ -240,8 +256,11 @@ button{
     padding-right: 156px;
     background-color: #FFF
 }
+.portfolio-item{
+    width:calc((100% - 48px) / 3) ;
+}
 .portfolio-subtitle-text{
-    margin: 32px 16px;
+    padding: 32px 16px;
     border: 1px solid #e7e9fc;
 }
 .portfolio-subtitle{
@@ -280,6 +299,7 @@ button{
     letter-spacing: 0.03em;
     text-transform: uppercase;
     display: block;
+    display: inline-block;
     margin-bottom: 16px;
     color: #4d5ae5;
 }
