--- a/css/styles.css
+++ b/css/styles.css
@@ -28,9 +28,9 @@ p,h1,h2,h3,h4,h5,h6{
     margin-bottom: 0;
 }
 .container{
-    width: 1470px;
-    /*padding-left: 15px;
-    padding-right: 15px;*/
+    width: 1158px;
+    padding-left: 15px;
+    padding-right: 15px;
     margin: 0 auto;
 }
 /*==========header===========*/
@@ -38,8 +38,6 @@ p,h1,h2,h3,h4,h5,h6{
 .header{
     padding-top: 24px;
     padding-bottom: 24px;
-    padding-left: 15px;
-    padding-right: 15px;
     border-bottom: 1px solid #e7e9fc
 }
 .header .container{
@@ -167,8 +165,6 @@ button{
 .advantages-list{
     display: flex;
     gap: 24px;
-    padding-left: 156px;
-    padding-right: 156px;
 }
 .advantages-item{
     width: calc((100% - 3 * 24px) / 4);
@@ -207,13 +203,13 @@ button{
 .team-list{
     display: flex;
     gap: 24px;
-    padding-left: 156px;
-    padding-right: 156px;
     background-color: #f4f4fd
 }
 .team-item{
-    border-radius: 0 0 4px 4px;
     width: calc((100% - 3 * 24px) / 4);
+}
+.team-item{
+    border-radius: 0 0 4px 4px;
     background-color: #FFF
 }
 .team-name-gob{
@@ -242,9 +238,6 @@ button{
     padding-top: 120px;
     padding-bottom: 120px;
 }
-.portfolio .container{
-    border-top: none; 
-}
 .portfolio-title{
     font-weight: 700;
     font-size: 36px;
@@ -259,17 +252,15 @@ button{
     display: flex;
     flex-wrap: wrap;
     gap: 48px 24px;
-    padding-left: 156px;
-    padding-right: 156px;
     background-color: #FFF
 }
 .portfolio-item{
-    width:calc((100% - 48px) / 3) ;
+    width:calc((100% - 48px) / 3);
 }
 .portfolio-subtitle-text{
-    border-top: none;
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
+    border-top: none;
 }
 .portfolio-subtitle{
     font-weight: 500;
@@ -296,8 +287,8 @@ button{
     background: #2e2f42;
 }
 .footer .container{
-    padding-left: 156px;
-    padding-right: 156px;
+   /* padding-left: 156px;
+    padding-right: 156px;*/
 }
 .footer-logo{
     font-family: "Raleway", sans-serif;
