--- a/css/styles.css
+++ b/css/styles.css
@@ -36,8 +36,10 @@ p,h1,h2,h3,h4,h5,h6{
 /*==========header===========*/
 
 .header{
-    padding-top: 24px;
-    padding-bottom: 24px;
+    padding-right: 15px;
+    padding-left: 15px;
+   /* padding-top: 24px;
+    padding-bottom: 24px;*/
     border-bottom: 1px solid #e7e9fc
 }
 .header .container{
@@ -59,8 +61,8 @@ p,h1,h2,h3,h4,h5,h6{
     letter-spacing: 0.03em;
     text-transform: uppercase;
     margin-right: 76px;
-    /*padding-top: 24px;
-    padding-bottom: 24px;*/
+    padding-top: 24px;
+    padding-bottom: 24px;
     color: #4d5ae5;
 }
 .header-logo-part{
@@ -69,14 +71,14 @@ p,h1,h2,h3,h4,h5,h6{
 .header-list {
     display: flex;
     gap: 40px;
-    /*padding-top: 24px;
-    padding-bottom: 24px;*/
 }
 .header-link{
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    padding-top: 24px;
+    padding-bottom: 24px;
     color: #2e2f42;
 }
 .header-address{
@@ -85,13 +87,13 @@ p,h1,h2,h3,h4,h5,h6{
 .header-address-list {
     display: flex;
     gap: 40px;
-    /*padding-top: 24px;
-    padding-bottom: 24px;*/
 }
 .header-address-link{
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    padding-top: 24px;
+    padding-bottom: 24px;
     color: #434455;
 }
 .header-link:hover,
@@ -259,8 +261,9 @@ button{
 }
 .portfolio-subtitle-text{
     padding: 32px 16px;
-    border: 1px solid #e7e9fc;
-    border-top: none;
+    border-bottom: 1px solid #e7e9fc;
+    border-left: 1px solid #e7e9fc;
+    border-right: 1px solid #e7e9fc;
 }
 .portfolio-subtitle{
     font-weight: 500;
@@ -285,10 +288,6 @@ button{
     padding-top: 100px;
     padding-bottom: 100px;
     background: #2e2f42;
-}
-.footer .container{
-   /* padding-left: 156px;
-    padding-right: 156px;*/
 }
 .footer-logo{
     font-family: "Raleway", sans-serif;
